# ipv8-auth

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Dockerfile.migrations  README.md  docker-compose.yml  generate-html-cov.sh  strings.toml
.github/workflows/: cov.yml  docker-publish.yml
migrations/2022-06-18-211650_create_users/: up.sql
migrations/2022-06-18-231550_create_sessions/: up.sql
migrations/2022-07-18-013703_create_game/: up.sql
src/: game.rs  main.rs  models.rs  router.rs  routes.rs  rpc.rs  schema.rs  util.rs
src/routes/: game.rs  health.rs  mod.rs  users.rs  util.rs
src/routes/game/: mod.rs  resp.rs
src/routes/users/: login.rs  mod.rs  register.rs  user.rs
src/test/: mod.rs
src/tests/: mod.rs  users.rs
