[package]
name = "ipv8-auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4", features = ["postgres", "uuidv07", "chrono"] }
dotenv = "0.15"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
futures = "0.3"
lazy_static = "1.4"
tracing = "0.1"
tracing-subscriber = "0.3"
argon2 = "0.4"
rand_core = { version = "0.6", features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "0.8", features = ["v4"] }
chrono = "0.4"
toml = "0.5"
async-trait = "0.1"
hashbrown = "0.12"
rand = "0.8"
ipv8-proto-rust = { git = "https://github.com/realliance/ipv8-proto.git", rev = "137aa4dea8dd810714dc0e0095b4fd8d0d8e930e" }
capnp-rpc = "0.14"
capnp = "0.14"
tokio-util = { version = "0.7", features = ["compat"] }

[dev-dependencies]
mockall = "0.11"
